@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
           - add a L<> around the support mailing list address woven into pod
+          - automatically use "LICENCE" rather than "LICENSE" in distributions
+            with first-come maintainers who are not Americans
 
 0.103     2015-09-04 02:22:42Z
           - switch to [MungeFile] for munging
